--- a/src/App.css
+++ b/src/App.css
@@ -1,26 +1,19 @@
+*,
+*::before,
+*::after{
+  box-sizing: border-box;
+}
 
 body {
-  background-color: #24272d;
+  color: aliceblue;
+  background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(37,9,142,1) 39%, rgba(2,0,5,1) 100%);
 }
+
 .logo {
   width: 6rem;
 }
 
 
 
-.App {
-  text-align: center;
-}
-
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
