--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,14 @@
 body {
   color: aliceblue;
   background: rgb(2,0,36);
-background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(37,9,142,1) 39%, rgba(2,0,5,1) 100%);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba(2,0,5,1) 100%);
 }
 
 .logo {
   width: 6rem;
+}
+.card {
+  align-content: center;
 }
 
 
