--- a/src/App.css
+++ b/src/App.css
@@ -11,11 +11,29 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba
 }
 
 .logo {
-  width: 6rem;
+  width: 4rem;
 }
 .card {
   align-content: center;
+  text-align: center;
+  width: 10rem;
+  border-radius: 1rem;
+  margin: .5rem;
 }
+.card-body {
+  border-radius: 1rem;
+  background: linear-gradient(90deg, rgba(205, 251, 146, 0.764) 0%, rgba(178, 175, 91, 0.345) 39%, rgb(228, 173, 97) 100%);
+
+}
+.navbar {
+  border-radius: 1rem;
+  background: cadetblue;
+  font-size: 1.2rem;
+}
+.btn {
+  font-size: .7rem;
+}
+
 
 
 
