--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic);
+
 *,
 *::before,
 *::after{
@@ -16,7 +18,7 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba
 .card {
   align-content: center;
   text-align: center;
-  width: 10rem;
+  width: 13rem;
   border-radius: 1rem;
   margin: .5rem;
 }
@@ -26,12 +28,19 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba
 
 }
 .navbar {
+  
   border-radius: 1rem;
-  background: cadetblue;
+  background: rgb(24, 33, 34);
   font-size: 1.2rem;
+  box-shadow: .5em .5em 1em rgba(0, 0, 0, 0.351);
 }
 .btn {
   font-size: .7rem;
+}
+
+.cool-phrase {
+  font-size: 2rem;
+  font-family: Lato;
 }
 
 
