--- a/src/App.css
+++ b/src/App.css
@@ -16,24 +16,31 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba
   width: 4rem;
 }
 .card {
+  background-color: rgb(181, 228, 152);
   align-content: center;
   text-align: center;
-  width: 13rem;
   border-radius: 1rem;
   margin: .5rem;
 }
 .card-body {
   border-radius: 1rem;
   background: linear-gradient(90deg, rgba(205, 251, 146, 0.764) 0%, rgba(178, 175, 91, 0.345) 39%, rgb(228, 173, 97) 100%);
-
+}
+.bubbleAttack {
+  border-radius: 1rem;
+  max-width: max-content;
 }
 .navbar {
-  
   border-radius: 1rem;
-  background: rgb(24, 33, 34);
+  background: rgba(30, 157, 171, 0.241);
   font-size: 1.2rem;
   box-shadow: .5em .5em 1em rgba(0, 0, 0, 0.351);
 }
+.nav-item {
+  padding: 1rem;
+  font-size: 1.3rem;
+}
+
 .btn {
   font-size: .7rem;
 }
