--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba
   width: 3rem;
 }
 .card {
-  background-color: rgb(181, 228, 152);
+  background-color: rgb(178, 189, 172);
   align-content: center;
   text-align: center;
   border-radius: 1rem;
@@ -24,7 +24,7 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba
 }
 .card-body {
   border-radius: 1rem;
-  background: linear-gradient(90deg, rgba(205, 251, 146, 0.764) 0%, rgba(178, 175, 91, 0.345) 39%, rgb(228, 173, 97) 100%);
+  background: linear-gradient(90deg, rgba(53, 215, 217, 0.392) 0%, rgba(223, 217, 39, 0.544) 39%, rgba(228, 173, 97, 0.68) 100%);
 }
 .bubbleAttack {
   border-radius: 1rem;
@@ -40,9 +40,11 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba
 }
 .nav {
   align-items: end;
+  margin-left: 6rem;
 }
 .nav-item {
-  font-size: 1.3rem;
+  margin: 1rem;
+  font-size: 1.5rem;
 }
 
 .btn {
@@ -62,6 +64,11 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba
 }
 .card-img-top {
   border-radius: 1rem;
+}
+.spiderImg {
+  border-radius: 50%;
+  width: 40rem;
+  box-shadow: .5rem 1rem 1rem rgba(0, 0, 0, 0.295);
 }
 
 
