--- a/src/App.css
+++ b/src/App.css
@@ -69,7 +69,9 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba
   width: 20rem;
   box-shadow: .5rem 1rem 1rem rgba(0, 0, 0, 0.295);
 }
-
+.game-container {
+  max-width: fit-content;
+}
 
 
 
