--- a/src/App.css
+++ b/src/App.css
@@ -28,8 +28,8 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba
 }
 .bubbleAttack {
   border-radius: 1rem;
-  max-width: max-content;
 }
+
 .navbar {
   margin: 1rem;
   border-radius: 1rem;
@@ -38,12 +38,13 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba
   font-size: 1.2rem;
   box-shadow: .5em .5em 1em rgba(0, 0, 0, 0.351);
 }
+
 .nav {
   align-items: end;
   margin-left: 6rem;
 }
 .nav-item {
-  font-size: 1rem;
+  font-size: 1.3rem;
 }
 
 .btn {
@@ -70,7 +71,11 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba
   box-shadow: .5rem 1rem 1rem rgba(0, 0, 0, 0.295);
 }
 .game-container {
-  max-width: fit-content;
+  width: 30rem;
+}
+.container {
+  align-content: center;
+
 }
 
 
