--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,17 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba
 }
 
 .btn {
-  font-size: 1rem;
+  text-align: center;
+  border-radius: 1.5rem;
+  font-size: 1.8rem;
+  margin-bottom: 2px;
+  color: aliceblue;
+  background-color: rgb(90, 91, 83);
+  box-shadow: .1rem .1rem .8rem .5rem rgba(249, 22, 22, 0.475);
+
+  &:hover {
+    background-color: rgb(242, 254, 185);
+  }
 }
 
 .cool-phrase {
@@ -81,6 +91,9 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba
 .container {
   align-content: center;
 
+}
+.container-apps {
+  width: max-content;
 }
 .pictures {
   border-radius: 1rem;
