--- a/src/App.css
+++ b/src/App.css
@@ -73,6 +73,7 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba
 .page-title {
   text-align: center;
   font-size: 3rem;
+  margin: 2rem;
 
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
