--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,7 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba
 
 
 .btn {
-  box-shadow: -.1rem .1rem .8rem .2rem rgb(220, 78, 49);
+  box-shadow: -.1rem .1rem .8rem .2rem rgba(220, 78, 49, 0.214);
   &:hover {
     background-color: rgb(92, 101, 50);
   }
