--- a/src/App.css
+++ b/src/App.css
@@ -32,6 +32,7 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba
 }
 .bubbleAttack {
   border-radius: 1rem;
+  margin: 2rem;
 }
 
 .navbar {
@@ -68,16 +69,27 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba
 }
 
 .cool-phrase {
+  margin: 2rem;
   font-size: 2rem;
   font-family: Lato;
   text-align: center;
+  color: antiquewhite;
 }
 .page-title {
-  text-align: center;
-  font-size: 3rem;
+  text-align: left;
+  font-size: 8rem;
   margin: 2rem;
-
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Silkscreen;
+  text-shadow: .5rem 1rem 1rem rgba(0, 0, 0, 0.851);
+  color: #e1c1ff;
+}
+.name-title{
+  margin: 3rem;
+  font-size: 8rem;
+  text-align: left;
+  font-family: Jost;
+  color: #f8ffaa;
+  text-shadow: .5rem 1rem 1rem rgba(0, 0, 0, 0.798);
 }
 .card-img-top {
   border-radius: 1rem;
@@ -101,7 +113,14 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba
 }
 .game-container{
   color: #e1c1ff;
+  align-self: center;
 }
+.title-container {
+  padding: 4rem;
+  margin-bottom: 4rem;
+
+}
+
 .pictures {
   border-radius: 1rem;
   margin: 2px;
