--- a/src/App.css
+++ b/src/App.css
@@ -85,14 +85,15 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba
 }
 .name-title{
   margin: 3rem;
-  font-size: 8rem;
-  text-align: left;
+  font-size: 6rem;
+  text-align: center;
   font-family: Jost;
   color: #f8ffaa;
   text-shadow: .5rem 1rem 1rem rgba(0, 0, 0, 0.798);
 }
 .card-img-top {
   border-radius: 1rem;
+  margin-top: 2rem;
 }
 .spiderImg {
   border-radius: 5rem;
@@ -103,11 +104,7 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba
   width: min-content;
 }
 
-.container {
-  align-content: center;
-  text-align: center;
 
-}
 .container-apps {
   width: max-content;
 }
