--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,12 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba
   color: rgb(251, 253, 254);
   box-shadow: .5em .5em 1em rgba(0, 0, 0, 0.351);
 }
+.navbar-brand {
+  font-family: Jost;
+  font-size: 1.5rem;
+  margin-left: 1rem;
+  color: #f8ffaa;
+}
 
 .nav {
   align-items: end;
