--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,9 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba
 .logo {
   width: 3rem;
 }
+.logo-big {
+  width: 10rem;
+}
 .card {
   background-color: rgba(31, 4, 25, 0.318);
   align-content: center;
@@ -139,10 +142,33 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba
 .col {
   margin: 1rem;
 }
-.footer {
-  align-items: center;
+.footer-container {
+  display: flex;
+  background-color: #002a38;
+  line-height: 1.3;
+  font-family: Menlo, monospace;
 
+  
+
+.footer-li {
+    color: white;
+    text-decoration: none;
+    box-shadow: inset 0 -1px 0 hsla(0, 0%, 100%, 0.4);
+  }
+  
 }
+.footer-ul{
+  display: inline-grid;
+  grid-auto-flow: row;
+  grid-gap: 24px;
+  justify-items: center;
+  margin: auto;
+}
+
+
+
+
+
 
 
 
