--- a/src/App.css
+++ b/src/App.css
@@ -140,10 +140,11 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba
   margin: 1rem;
 }
 footer{
-  background-color: #002a38;
+  background: rgba(30, 157, 171, 0.722);
   font-family: Lato;
   border-radius: 5px;
   align-content: center;
+  box-shadow: .5rem .5rem .5rem rgba(0, 0, 9, 0.486);
   
 }
 
