--- a/src/App.css
+++ b/src/App.css
@@ -61,7 +61,8 @@ background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgb(43, 17, 138) 39%, rgba
     color: greenyellow;
   }
   &:active {
-    background-color: aliceblue;
+    background-color: rgba(240, 248, 255, 0.448);
+    border-radius: 10px;
   }
 }
 
